# aws-practice

./: .gitignore  pyproject.toml
cloud-practitioner-certification/: ccp-study-guide.md
cloud-practitioner-certification/stephane-maarek-resources/code-resources/s3/: index.html
diagrams/: diagrams.ipynb
